# app/OpenApi/OpenApi.php
@@ -2,6 +2,8 @@
 
 namespace App\OpenApi;
 
+use OpenApi\Annotations as OA;
+
 /**
  * @OA\Info(
  *     version="1.0.0",
@@ -12,6 +14,15 @@ namespace App\OpenApi;
  * @OA\Server(
  *     url="/",
  *     description="Default Server"
+ * )
+ *
+ * @OA\SecurityScheme(
+ *     securityScheme="sanctum",
+ *     type="http",
+ *     scheme="bearer",
+ *     description="Enter token in format (Bearer <token>)",
+ *     name="Authorization",
+ *     in="header"
  * )
  */
 class OpenApi {}
